--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
-  "name": "next-netlify-starter",
-  "version": "0.5.0",
-  "private": true,
+  "name": "learn-to-send-email-via-google-script-html-no-server",
+  "version": "2.1.0",
+  "description": "Tutorial showing how to save data to a google doc spreadsheet from any html form (including sending emails!)",
+  "main": "static-server.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "export": "next export"
+    "start": "node_modules/.bin/live-server --port=8000"
   },
-  "dependencies": {
-    "next": "^11.1.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dwyl/learn-to-send-email-via-google-script-html-no-server.git"
+  },
+  "keywords": [
+    "tutorial",
+    "google",
+    "docs",
+    "email",
+    "form"
+  ],
+  "author": "nelsonic @dwyl",
+  "license": "GPL-2.0",
+  "bugs": {
+    "url": "https://github.com/dwyl/learn-to-send-email-via-google-script-html-no-server/issues"
+  },
+  "homepage": "https://github.com/dwyl/learn-to-send-email-via-google-script-html-no-server#readme",
+  "devDependencies": {
+    "live-server": "^1.2.0"
   }
 }
